fix(data-management): improve collection and SC workflows
