# apps/api/app/shared/generated/openapi_models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-08-12T14:39:27+00:00
+#   timestamp: 2026-08-15T10:11:59+00:00
 
 from __future__ import annotations
 
@@ -761,6 +761,11 @@ class ScImportResponse(BaseModel):
     error: Optional[str] = Field(None, title="Error")
 
 
+class ScInspectionDatasetItem(BaseModel):
+    id: str = Field(..., title="Id")
+    name: str = Field(..., title="Name")
+
+
 class ScInspectionSummaryItem(BaseModel):
     inspection_time: str = Field(..., title="Inspection Time")
     wafer_key: int = Field(..., title="Wafer Key")
@@ -778,6 +783,7 @@ class ScInspectionSummaryItem(BaseModel):
     defects: int = Field(..., title="Defects")
     images: int = Field(..., title="Images")
     device: str = Field(..., title="Device")
+    datasets: Optional[List[ScInspectionDatasetItem]] = Field(None, title="Datasets")
 
 
 class ScReviewImageItem(BaseModel):
